--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "ai-model-risk-management"
 version = "0.1.0"
-description = "Lightweight Model Risk Management (MRM) toolkit: inventory, risk tiering, artifacts, approvals, audit trail, CI gates."
-readme = "README.md"
+description = "Lightweight Model Risk Management (MRM) toolkit"
 requires-python = ">=3.10"
-dependencies = [
-  "typer>=0.12.0",
-  "pydantic>=2.6.0",
-  "pyyaml>=6.0.1",
-  "rich>=13.7.0",
-]
+dependencies = ["typer>=0.12.0","pydantic>=2.6.0","pyyaml>=6.0.1","rich>=13.7.0"]
 
 [project.scripts]
 gov = "govcli.cli:app"
 
-[tool.ruff]
-line-length = 100
+[tool.setuptools]
+packages = ["govcli"]
