Modify setup.cfg to include 'govcli' package
Updated package configuration to specify 'govcli'.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,14 +4,5 @@ version = 0.1.0
 description = Lightweight Model Risk Management (MRM) toolkit
 
 [options]
-packages = find:
+packages = govcli
 include_package_data = True
-
-[options.packages.find]
-include = govcli*
-exclude =
-    models*
-    controls*
-    artifacts*
-    tests*
-    docs*
