--- a/.github/workflows/governance-gate.yml
+++ b/.github/workflows/governance-gate.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Python
@@ -19,21 +19,17 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Show packaging config
+      - name: Install dependencies (no packaging)
         run: |
-          echo "===== pyproject.toml ====="
-          cat pyproject.toml
-          echo "===== setup.cfg ====="
-          if [ -f setup.cfg ]; then cat setup.cfg; else echo "no setup.cfg"; fi
-
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -e .
+          python -m pip install --upgrade pip
+          pip install typer pydantic pyyaml rich
 
       - name: Run governance gate for sample model
         run: |
-          gov assess credit_default_lr
-          gov generate credit_default_lr
-          gov approve credit_default_lr --approver "CI Demo Approver" --decision approved --reason "CI demo approval"
-          gov gate credit_default_lr
+          python -m govcli.cli assess credit_default_lr
+          python -m govcli.cli generate credit_default_lr
+          python -m govcli.cli approve credit_default_lr \
+            --approver "CI Demo Approver" \
+            --decision approved \
+            --reason "CI demo approval"
+          python -m govcli.cli gate credit_default_lr
